--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\End-to-end-Machine-Learning-Project-with-MLflow\\\\research'"
+       "'c:\\\\End-to-end-Machine-Learning-Project-with-MLflow\\\\research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\End-to-end-Machine-Learning-Project-with-MLflow'"
+       "'c:\\\\End-to-end-Machine-Learning-Project-with-MLflow'"
       ]
      },
      "execution_count": 4,
@@ -181,11 +181,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-07-11 20:13:53,258: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-07-11 20:13:53,265: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-07-11 20:13:53,268: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2023-07-11 20:13:53,269: INFO: common: created directory at: artifacts]\n",
-      "[2023-07-11 20:13:53,270: INFO: common: created directory at: artifacts/model_trainer]\n"
+      "[2025-10-07 16:53:15,534: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-10-07 16:53:15,536: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-10-07 16:53:15,539: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-10-07 16:53:15,541: INFO: common: created directory at: artifacts]\n",
+      "[2025-10-07 16:53:15,542: INFO: common: created directory at: artifacts/model_trainer]\n"
      ]
     }
    ],
@@ -223,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.20"
   },
   "orig_nbformat": 4
  },
